Fix some layout issues

--- a/demo/demo_web/src/app.css
+++ b/demo/demo_web/src/app.css
@@ -13,7 +13,21 @@ body {
     gap: 15px;
 }
 
-.demo-list {
+.main-card {
+    min-height: 50vh;
+}
+
+.overflow-80 {
+    max-height: 80vh;
+    overflow-y: auto;
+}
+
+.overflow-50 {
+    max-height: 50vh;
+    overflow-y: auto;
+}
+
+.overflow-30 {
     max-height: 30vh;
     overflow-y: auto;
 }
